# netops

./: .env.example  .gitignore  2026-01-21_radius-core_wg_peers.conf  2026-01-21_wg_radius_rollout_summary.csv  CHANGELOG.md  README.md  __init__.py  bulk_to_retail.rsc  config.py  edit_logs.rsc  emailer.py  ewt_hoy_buildout.rsc  ewt_hoy_subnets.csv  extract_snapshot_from_audit_xlsx.py  getNeighbors2.rsc  inventory.csv  logging.py  orchestrator.py  pyproject.toml  run_daily_export.ps1  test_list.csv  test_mass.rsc  test_rsc_template.rsc  uploader.py
.github/workflows/: ci.yml  release.yml  semantic-release.yml
parsers/: __init__.py  mikrotik_queue.py
plans/: AV2_BLDG_02_1847_GW.rsc  AV2_BLDG_05_1854_GW.rsc  AV2_BLDG_08_1907_GW.rsc
scripts/: README.md  build_rsc_from_csv.py  callrec_cleanup.py  generate_radius_secrets.py  reconcile_radius_publics.py  subnet.py
src/netops/: __init__.py  cli.py  config.py  emailer.py  excel.py  inventory.py  orchestrator.py  paths.py  progress.py  uploader.py
src/netops/cli/: __init__.py  daily_export copy.py  daily_export.py  mass_config.py  pw_gen.py  speed_audit.py  wg_radius_rollout.py  wireless_info.py
src/netops/ipam/: subnetting.py
src/netops/reports/: __init__.py  hashlog.py  speed_compare.py
src/netops/security/: passwords.py
src/netops/systems/: base.py  cmts.py  dsl.py  ettp.py  gpon.py
src/netops/transports/: __init__.py  base.py  sftp.py  ssh.py  telnet.py  telnet_async.py  telnet_simple.py
systems/: __init__.py  cmts.py
tests/: test_hashlog_report.py  test_uploader_cleanup.py
transports/: __init__.py
