[project]
name = "netops"
version = "0.4.2"
description = "Network operations tooling (Mikrotik, Omada, Speed Audit, etc.)"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
  "paramiko",
  "python-dotenv",
  "click",
  "telnetlib3"
]

[project.scripts]
netops = "netops.cli:cli"

[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[tool.setuptools]
package-dir = {"" = "src"}

[tool.setuptools.packages.find]
where = ["src"]

[tool.semantic_release]
version_source = "tag"                               # tags drive the version
commit_parser = "angular"                            # conventional commits
changelog_file = "CHANGELOG.md"
upload_to_pypi = false
version_variables = [
  "src/netops/__init__.py:__version__",
]


[tool.semantic_release.changelog]
# (Optional) You can tune how release notes are formatted; defaults are fine.

[tool.commitizen]
name = "cz_conventional_commits"
version = "0.4.2"
tag_format = "v$version"
update_changelog_on_bump = true
changelog_file = "CHANGELOG.md"
